# skillsmarket.md

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RENDER_DEPLOYMENT.md  UNDERSTANDING.md  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml  skillsmarket.md  specs.md  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/skillsmarket/: __init__.py  api.py  apify_sources.py  courses.py  data_sources.py  engine.py  extract.py  fixtures.py  history.py  ingest.py  ingest_apify.py  ingest_mcf.py  live_evidence.py  llm.py  resume.py  resume_examples.py  settings.py  skill_catalog.py  (+2 more)
scripts/: render_prepare_data.py
src/: App.tsx  api.ts  router.tsx  styles.css  types.ts  vite-env.d.ts
submissions/: README.md  ai-tools-use.md  anything-else.md  datasets-used-and-rationale.md  interaction-logs.md  pyconsg26-programme.md  tech-stack.md
tests/: conftest.py  test_api.py  test_api_full.py  test_api_schema.py  test_apify_and_research.py  test_apify_config.py  test_course_recommendations.py  test_data_sources.py  test_demo_flow_contract.py  test_frontend_static.py  test_history_smoothing.py  test_index_engine.py  test_live_data.py  test_market_workflows.py  test_naming_contract.py  test_openrouter_guardrail.py  test_public_hostname.py  test_resume_ai_guardrail.py  test_resume_analysis.py  test_resume_api.py  test_resume_extract.py  test_resume_highlights.py  test_resume_llm.py  test_security_contract.py  test_settings.py  test_skill_catalog.py  test_skill_detail_api.py  test_specs_alignment.py
(+43 files in other folders)
