[project]
name = "skillsmarket"
version = "0.1.0"
description = "SkillsMarket Singapore skills exchange hackathon app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "polars>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "-q"
